made the hamburger menu background white, while the gallery active state grey. also made the recommended cards wrap. fixed the home page's redirect buttons

--- a/P02 Project/css/main.css
+++ b/P02 Project/css/main.css
@@ -605,6 +605,8 @@ tr:hover {
   border-color: #EEE;
 
   border-style: solid;
+
+  margin-bottom: 1em;
 }
 
 .newsCard2:hover {
@@ -669,7 +671,7 @@ tr:hover {
 }
 
 ul {
-  color: white;
+  color: #191919;
 
 }
 
@@ -766,7 +768,7 @@ ul {
 .img-gallery-row {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 
   justify-content: center;
 
@@ -850,6 +852,10 @@ ul {
 
   }
 
+  .hamburger.active{
+    background-color: white;
+  }
+  
   .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
@@ -892,6 +898,7 @@ ul {
   .navbar-menu.active {
     left: 0;
     margin-top: 2em;
+    background-color: white;
   }
 
   body {
@@ -1043,8 +1050,12 @@ ul {
   z-index: 0;
 }
 
-.active, .dot:hover {
+.dot:hover {
   background-color: #717171;
+}
+
+.active {
+  background-color: grey;
 }
 
 .fade {
